--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -126,6 +126,16 @@ a.active {
     margin: 0% 0% 5% 0%;
 }
 
+.projectimgRPS {
+    max-width: 100%;
+    padding-left: 20%;
+    margin: 0% 0% 5% 0%;
+}
+
+.projectRPSh1 {
+    margin-left: 13%;
+}
+
 .img {
     height: auto;
     margin: 0% 2.5% 5% 2.5%;
@@ -221,6 +231,9 @@ and (max-width : 768px) {
         padding: 0px;
     }
     .projectimg {
+        padding: 0px;
+    }
+    .projectimgRPS {
         padding: 0px;
     }
     .nav-list {
