--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -7,7 +7,6 @@
 
 .main {
     overflow-x: hidden;
-    position: absolute;
 }
 
 html {
@@ -95,7 +94,7 @@ nav {
     padding-top: 2%;
 }
 
-.intro-content, .about-content, .project-content {
+.intro-content, .about-content, .project-content, p {
     margin-left: 15%;
     padding-top: 1.5%;
     font-size: 24px;
@@ -123,11 +122,11 @@ nav {
 .project-container-left, .project-container-center, .project-container-right {
     background-color: #fdeadf;
     width: 20%;
-    height: 65vh;
     border: 1px solid black;
     padding-top: 1.5%;
     margin-left: 0;
     padding: 0% 2% 2% 2%;
+    text-align: center;
 }
 .project-container-left {
     float: left;
@@ -163,7 +162,7 @@ footer {
     width: 100%;
     letter-spacing: 3px;
     margin-top: 7.5%;
-    padding-top: 2%;
+    padding-top: 1%;
     padding-bottom: 2%;
 }
 .footer-content {
@@ -203,6 +202,9 @@ and (max-width : 1500px) {
 /* Mobile Devices ----------- */
 @media screen
 and (max-width : 1200px) {
+    .main {
+        position: absolute;
+    }
     .logo {
         margin-left: 5%;
         font-size: 32px;
@@ -213,19 +215,20 @@ and (max-width : 1200px) {
         font-size: 42px;
         width: 90%;
     }
-    .intro-content, .about-content, .project-content {
+    .intro-content, .about-content, .project-content, p {
         margin-left: 5%;
         font-size: 22px;
         width: 90%;
     }
     .project-container-left, .project-container-center, .project-container-right {
         margin-top: 5%;
-        width: 100%;
-        height: 85vh;
         margin-left: 0;
+        padding-bottom: 10%;
+        width: 100%;
     }
     .project-container-right {
         float: left;
+        margin-bottom: 10%;
     }
     .links {
         display: none;
