--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -194,6 +194,25 @@ a.active {
     cursor: default;
 }
 
+#greyout {
+    display: none;
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    height: 100%;
+    width: 100%;
+    background-color: black;
+    opacity: 0.25;
+    z-index: 7;
+}
+#grayout {
+    filter: alpha(opacity=50);
+ }
+   
+ * html #grayout {
+    position: absolute;
+ }
+
 @media screen
 and (max-width : 1500px) {
     .nav-list {
@@ -273,12 +292,13 @@ and (max-width : 1200px) {
         padding: 0;
     }
     .nav-list {
-        position: absolute;
+        position: fixed;
+        z-index: 8;
         margin: 0;
         right: 0;
-        top: 7.5vh;
-        height: 70vh;
-        width: 50%;
+        top: 0;
+        height: 100vh;
+        width: 60%;
         background-color: #FFFFFF;
         display: flex;
         flex-direction: column;
@@ -287,6 +307,9 @@ and (max-width : 1200px) {
         transition: transform 0.5s ease-in;
     }
     .hamburger {
+        position: fixed;
+        z-index: 9;
+        right: 0;
         margin-right: 5%;
         display: block;
     }
@@ -295,11 +318,3 @@ and (max-width : 1200px) {
 .nav-active {
     transform: translateX(0);
 }
-
-
-
-  
-
-
-
-
