--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     padding: 0;
@@ -74,6 +75,7 @@ nav {
     height: 5px;
     margin: 5px;
     background-color: #000000;
+    transition: all 0.3s ease;
 }
 /****End of Hamburger Button Section****/
 
@@ -317,4 +319,14 @@ and (max-width : 1200px) {
 
 .nav-active {
     transform: translateX(0);
+}
+
+.x .line1 {
+    transform: rotate(-45deg) translateX(-5px) translateY(9px);
+}
+.x .line2 {
+    opacity: 0;
+}
+.x .line3 {
+    transform: rotate(45deg) translateX(-5px) translateY(-9px);
 }
